fix: update models
